--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,25 +1,37 @@
 name: Publish Package to npmjs
 
+# This tells GitHub to run the job ONLY when you push a new tag
 on:
-    push:
-        tags:
-            - 'v*.*.*' # Runs on tags like v1.0.0, v1.0.1, etc.
+  push:
+    tags:
+      - 'v*.*.*' # This matches tags like v1.0.0, v1.0.1, etc.
 
 jobs:
-    publish:
-        runs-on: ubuntu-latest
-        permissions:
-            id-token: write # This is the OIDC part
-            contents: read
-        steps:
-            - name: Checkout repository
-              uses: actions/checkout@v4
-            - name: Set up Node.js
-              uses: actions/setup-node@v4
-              with:
-                node-version: '20'
-                registry-url: 'https://registry.npmjs.org'
-            - name: Install dependencies
-              run: npm ci
-            - name: Publish package
-              run: npm publish --access public
+  publish:
+    runs-on: ubuntu-latest
+    
+    # These permissions are required for OIDC (Trusted Publishing)
+    permissions:
+      id-token: write  # This is the OIDC magic
+      contents: read
+      
+    steps:
+      # 1. Checks out your code
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      # 2. Sets up Node.js so it can use npm
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20' # Use a modern version of Node
+          registry-url: 'https://registry.npmjs.org'
+          
+      # 3. Installs your project's dependencies
+      - name: Install dependencies
+        run: npm ci 
+        
+      # 4. Publishes to npm
+      #    This automatically uses OIDC. No TOKEN is needed!
+      - name: Publish package
+        run: npm publish --access public
